# el-oraculo

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: api.rs  main.rs  storage.rs  sync.rs
static/: index.html
umbrel/: docker-compose.yml
