[package]
name = "bitcoin-price-oracle"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Lightweight on-chain Bitcoin price oracle for Umbrel"

[dependencies]
brk_oracle = { git = "https://github.com/bitcoinresearchkit/brk", tag = "v0.2.5" }
brk_types = { git = "https://github.com/bitcoinresearchkit/brk", tag = "v0.2.5" }
brk_rpc = { git = "https://github.com/bitcoinresearchkit/brk", tag = "v0.2.5", features = ["corepc"] }
brk_reader = { git = "https://github.com/bitcoinresearchkit/brk", tag = "v0.2.5" }

axum = { version = "0.8", features = ["json", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
